--- a/loleaflet/admin/admintemplate.html
+++ b/loleaflet/admin/admintemplate.html
@@ -55,6 +55,7 @@
             <a class="list-group-item list-group-item-action" id="adminConfigSettings" href="adminConfigSettings.html"><i class="bi bi-tools">&nbsp;&nbsp;</i><span _="System configuration"></span></a>
             <a class="list-group-item list-group-item-action" id="adminSoftwareUpgrade" href="adminSoftwareUpgrade.html"><i class="bi bi-hammer">&nbsp;&nbsp;</i><span _="Software upgrade"></span></a>
             <a class="list-group-item list-group-item-action" id="adminFontManager" href="adminFontManager.html"><i class="bi bi-file-earmark-font">&nbsp;&nbsp;</i><span _="Font manager"></span></a>
+            <a class="list-group-item list-group-item-action" id="adminMenuEditor" href="adminMenuEditor.html"><i class="bi bi-menu-app">&nbsp;&nbsp;</i><span _="Menu editor"></span></a>
         </div>
         <div class="text-center mt-2">
             <span class="badge bg-secondary" id="version"></span>
