admin: 更新後台選單編輯功能

--- a/loleaflet/admin/adminMenuEditor.html
+++ b/loleaflet/admin/adminMenuEditor.html
@@ -44,7 +44,9 @@
 
 <div class="btn-group btn-group-sm" role="group">
     <button id="updatemenu" type="button" class="btn btm-sm btn-outline-success"><i class="bi bi-save me-1"></i><span _="Update menu permissions."></span></button>
-    <button id="showjson" type="button" class="btn btm-sm btn-outline-success"><i class="bi bi-file-text me-1"></i><span _="Show json content."></span></button>
+    <button id="showdisabledjson" type="button" class="btn btm-sm btn-outline-success"><i class="bi bi-file-text me-1"></i><span _="Show disabled JSON content."></span></button>
+    <button id="showenabledjson" type="button" class="btn btm-sm btn-outline-success"><i class="bi bi-file-text me-1"></i><span _="Show enabled JSON content."></span></button>
+    <button id="resetmenu" type="button" class="btn btm-sm btn-danger"><i class="bi bi-arrow-clockwise me-1"></i><span _="Reset menu"></span></button>
 </div>
 
 <!-- 顯示 JSON 內容視窗 -->
