--- a/loleaflet/admin/adminMenuEditor.html
+++ b/loleaflet/admin/adminMenuEditor.html
@@ -5,18 +5,27 @@
 </script>
 
 <ul class="nav nav-pills mb-1" id="pills-tab" role="tablist">
-    <li class="nav-item" role="presentation">
-        <button class="nav-link active" data-bs-toggle="pill" data-bs-target="#writer" type="button" role="tab" aria-selected="true"><i class="writer-icon-img"></i><span _="Writer menu"></span></button>
+    <li class="nav-item">
+        <button id="writer-tab" class="nav-link active" data-bs-toggle="pill" data-bs-target="#writer" type="button" role="tab" aria-selected="true">
+            <img src="../images/res/odt.svg" style="vertical-align: sub; width: 18px; height: 18px;"/>&nbsp;
+            <span _="Writer menu"></span>
+        </button>
     </li>
-    <li class="nav-item" role="presentation">
-        <button class="nav-link" data-bs-toggle="pill" data-bs-target="#calc" type="button" role="tab" aria-selected="false"><i class="calc-icon-img"></i><span _="Calc menu"></span></button>
+    <li class="nav-item">
+        <button id="calc-tab" class="nav-link" data-bs-toggle="pill" data-bs-target="#calc" type="button" role="tab" aria-selected="false">
+            <img src="../images/res/ods.svg" style="vertical-align: sub; width: 18px; height: 18px;"/>&nbsp;
+            <span _="Calc menu"></span>
+        </button>
     </li>
-    <li class="nav-item" role="presentation">
-        <button class="nav-link" data-bs-toggle="pill" data-bs-target="#impress" type="button" role="tab" aria-selected="false"><i class="impress-icon-img"></i><span _="Impress menu"></span></button>
+    <li class="nav-item">
+        <button id="impress-tab" class="nav-link" data-bs-toggle="pill" data-bs-target="#impress" type="button" role="tab" aria-selected="false">
+            <img src="../images/res/odp.svg" style="vertical-align: sub; width: 18px; height: 18px;"/>&nbsp;
+            <span _="Impress menu"></span>
+        </button>
     </li>
 </ul>
 
-<div class="tab-content">
+<div id="main-menu" class="tab-content mb-3" style="border: 1px solid #dddddd; padding: 5px; border-radius: 6px;">
     <div id="writer" class="active tab-pane fade show">
         <ul id="writer-menu" class="sm sm-simple lo-menu"></ul>
     </div>
