welcome: add CSS tags to welcome dialog
Change-Id: Ibe713b37a6ba00ad84a6e887c49b5fc6eb88b239
Signed-off-by: Henry Castro <hcastro@collabora.com>

--- a/loleaflet/welcome/welcome.html
+++ b/loleaflet/welcome/welcome.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="/loleaflet/%VERSION%/welcome/welcome.css">
+  </head>
 <body onload="onLoaded()">
 <div id="user-welcome">
 	<div class="slider">
