PostMessage examples: Improve form formatting
Signed-off-by: Pedro Pinto Silva <pedro.silva@collabora.com>
Change-Id: I3bc508600c1ad6531cd88bf5c4ef972d21f10fae

--- a/loleaflet/html/framed.doc.html
+++ b/loleaflet/html/framed.doc.html
@@ -163,15 +163,16 @@
 
     <h3>PostMessage test harness</h3>
 
-    <h4>Run python InsertText.py script</h4>
+    <h4>Run python scripts</h4>
     <form id="insert-text-form">
-      Click <button onclick="insertText(document.forms['insert-text-form'].elements['source'].value); return false;">here</button> to insert the following text into the document:
-      <textarea name="source" value="" rows="5" cols="50"></textarea>
+      <label for="fname"><b>InsertText.py</b>: inserts text into the document</label><br>
+      <textarea name="source" value="" rows="5" cols="50">Type your text and press Insert text</textarea><br>
+      <button onclick="insertText(document.forms['insert-text-form'].elements['source'].value); return false;">Insert text</button>
     </form>
-
-    <h4>Run Capitalize.py script</h4>
+    <br>
     <form id="insert-text-form">
-      Click <button onclick="capitalize(); return false;">here</button> to capitalize selected text in the document.</br></br>
+      <label for="fname"><b>Capitalize.py</b>: capitalize selected text in the document</label><br>
+      <button onclick="capitalize(); return false;">Capitalize selected text</button></br></br>
     </form>
 
     <h4>Various other messages to post</h4>
