welcome: add missing strings
Change-Id: I4dd6dc770a89815faf8ebd3b96821b3bbb5e2acb
Signed-off-by: Henry Castro <hcastro@collabora.com>

--- a/loleaflet/welcome/welcome.html
+++ b/loleaflet/welcome/welcome.html
@@ -23,9 +23,9 @@
 							<fig id="fig-slide1-c"></fig>
 							<fig id="fig-slide1-r"></fig>
 						</fig>
-						<h1 id="welcome-slide1-heading-1"></h1>
-						<h2 id="welcome-slide1-heading-2"></h2>
-						<p id="welcome-slide1-content"></p>
+						<h1 id="welcome-slide1-heading-1">Explore the new 6.4.13</h1>
+						<h2 id="welcome-slide1-heading-2">Collabora Online Development Edition</h2>
+						<p id="welcome-slide1-content">Enjoy the latest developments in online productivity, free for you to use, to explore and to use with others in the browser. Various <a href="#">apps</a> are also available for mobile. 6.4.10 introduces important improvements, in the areas of usability, visual presentation and performance.</p>
 						<div id="user-welcome--buttons">
 							<form action="#slide-2">
 								<button type="button" id="slide-1-button">Next</button>
@@ -34,9 +34,9 @@
 					</div>
 					<div id="slide-2">
 						<fig></fig>
-						<h1 id="welcome-slide2-heading-1"></h1>
-						<h2 id="welcome-slide2-heading-2"></h2>
-						<p id="welcome-slide2-content"></p>
+						<h1 id="welcome-slide2-heading-1">Discover all the changes</h1>
+						<h2 id="welcome-slide2-heading-2">Collabora Online Development Edition</h2>
+						<p id="welcome-slide2-content">Check the <a href="#">release notes</a> and learn all about: The latest milestone in performance particularly for larger groups working on documents; New scrollbars; Improved spreadsheet's tabs and more.</p>
 						<div id="user-welcome--buttons">
 							<form action="#slide-3">
 								<button type="button" id="slide-2-button">Next</button>
