Fix fallback welcome dialog on phone + other backports from online welcome dialog
Signed-off-by: Andras Timar <andras.timar@collabora.com>
Change-Id: Ifdf373c2c0b5a0962610d5fcb35f5845603a7a03

--- a/loleaflet/welcome/welcome.html
+++ b/loleaflet/welcome/welcome.html
@@ -28,7 +28,7 @@
 						<p id="welcome-slide1-content" data-translate="true">Enjoy the latest developments in online productivity, free for you to use, to explore and to use with others in the browser. Various <a target="_blank" href="https://www.collaboraoffice.com/solutions/collabora-office-android-ios/">apps</a> are also available for mobile.</p>
 						<div id="user-welcome--buttons">
 							<form action="#slide-2">
-								<button type="button" id="slide-1-button" data-translate="true">Next</button>
+								<button type="button" id="slide-1-button"><i class="arrow right"></i></button>
 							</form>
 						</div>
 					</div>
@@ -39,7 +39,7 @@
 						<p id="welcome-slide2-content" data-translate="true">Check the <a target="_blank" href="https://www.collaboraoffice.com/code-21-11-release-notes/">release notes</a> and learn all about: The latest Collabora Online Development Edition, aimed at home users and small teams. </p>
 						<div id="user-welcome--buttons">
 							<form action="#slide-3">
-								<button type="button" id="slide-2-button" data-translate="true">Next</button>
+								<button type="button" id="slide-2-button"><i class="arrow right"></i></button>
 							</form>
 						</div>
 					</div>
@@ -59,5 +59,6 @@
 			</div>
 			<a id="view-supported-versions" href="https://www.collaboraoffice.com/subscriptions/" target="_blank"></a>
 		</div>
+		<div id="welcome-close"></div>
 	</body>
 </html>
