config,UI: change classic -> compact and notebookbar -> tabbed

--- a/loleaflet/html/framed.doc.html
+++ b/loleaflet/html/framed.doc.html
@@ -195,8 +195,8 @@
       <button onclick="ShowMenubar(true); return false;">Show Menubar</button>
       <button onclick="ShowInsertButton(); return false;" title="via Insert_Button">Insert custom button</button>
       <p>
-      <button onclick="ShowNotebookbar(false); return false;">Classic Toolbar</button>
-      <button onclick="ShowNotebookbar(true); return false;">Notebookbar</button>
+      <button onclick="ShowNotebookbar(false); return false;">Compact Toolbar</button>
+      <button onclick="ShowNotebookbar(true); return false;">Tabbed Toolbar</button>
     </form>
 
     <h3>Document frame</h3>
