admin: 修正選單編輯圖示遺失問題

--- a/loleaflet/admin/adminMenuEditor.html
+++ b/loleaflet/admin/adminMenuEditor.html
@@ -7,19 +7,19 @@
 <ul class="nav nav-pills mb-1" id="pills-tab" role="tablist">
     <li class="nav-item">
         <button id="writer-tab" class="nav-link active" data-bs-toggle="pill" data-bs-target="#writer" type="button" role="tab" aria-selected="true">
-            <img src="../images/res/odt.svg" style="vertical-align: sub; width: 18px; height: 18px;"/>&nbsp;
+            <img src="../images/x-office-document.svg" style="vertical-align: sub; width: 18px; height: 18px;"/>&nbsp;
             <span _="Writer menu"></span>
         </button>
     </li>
     <li class="nav-item">
         <button id="calc-tab" class="nav-link" data-bs-toggle="pill" data-bs-target="#calc" type="button" role="tab" aria-selected="false">
-            <img src="../images/res/ods.svg" style="vertical-align: sub; width: 18px; height: 18px;"/>&nbsp;
+            <img src="../images/x-office-spreadsheet.svg" style="vertical-align: sub; width: 18px; height: 18px;"/>&nbsp;
             <span _="Calc menu"></span>
         </button>
     </li>
     <li class="nav-item">
         <button id="impress-tab" class="nav-link" data-bs-toggle="pill" data-bs-target="#impress" type="button" role="tab" aria-selected="false">
-            <img src="../images/res/odp.svg" style="vertical-align: sub; width: 18px; height: 18px;"/>&nbsp;
+            <img src="../images/x-office-presentation.svg" style="vertical-align: sub; width: 18px; height: 18px;"/>&nbsp;
             <span _="Impress menu"></span>
         </button>
     </li>
