Fixed duplicate watermark date labels.

--- a/loleaflet/admin/adminConfigSettings.html
+++ b/loleaflet/admin/adminConfigSettings.html
@@ -584,8 +584,8 @@
                 <span class="badge rounded-pill bg-secondary watermarktag">${mm-dd-yyyy}</span>
                 <span class="badge rounded-pill bg-secondary watermarktag">${dd-mm-yyyy}</span>
                 <span class="badge rounded-pill bg-secondary watermarktag">${yyyy/mm/dd}</span>
-                <span class="badge rounded-pill bg-secondary watermarktag">${mm-dd-yyyy}</span>
-                <span class="badge rounded-pill bg-secondary watermarktag">${dd-mm-yyyy}</span>
+                <span class="badge rounded-pill bg-secondary watermarktag">${mm/dd/yyyy}</span>
+                <span class="badge rounded-pill bg-secondary watermarktag">${dd/mm/yyyy}</span>
                 <span class="badge rounded-pill bg-secondary watermarktag">${yyyy.mm.dd}</span>
                 <span class="badge rounded-pill bg-secondary watermarktag">${mm.dd.yyyy}</span>
                 <span class="badge rounded-pill bg-secondary watermarktag">${dd.mm.yyyy}</span>
