Change the words that start with cool to oxool.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I2ae02127baf65764fe4743e0694b1917b205545f

--- a/browser/html/framed.doc.html
+++ b/browser/html/framed.doc.html
@@ -403,13 +403,13 @@
       frameUrl.searchParams.append('NotWOPIButIframe', 'true');
 
       function startOxool(url, file_path) {
-          var coolUrl = new URL(url);
+          var oxoolUrl = new URL(url);
           if (file_path) {
-              coolUrl.searchParams.set('file_path', file_path);
+              oxoolUrl.searchParams.set('file_path', file_path);
           }
           var iframe = document.getElementById('frame');
-          iframe.src = coolUrl.href;
-          link.href = coolUrl.href;
+          iframe.src = oxoolUrl.href;
+          link.href = oxoolUrl.href;
       }
 
       // Select the app with extension.
