--- a/browser/html/wasm.html
+++ b/browser/html/wasm.html
@@ -19,10 +19,10 @@
 </head>
 
 <body>
-    <form id="form" action enctype="multipart/form-data" target="coolframe" method="post">
+    <form id="form" action enctype="multipart/form-data" target="oxoolframe" method="post">
         <input name="access_token" value="test" type="hidden" />
     </form>
-    <iframe id="coolframe" name="coolframe" style="width:100%;height:100%;position:absolute;">
+    <iframe id="oxoolframe" name="oxoolframe" style="width:100%;height:100%;position:absolute;">
     </iframe>
     <script>
         function constructWopiUrl() {
